kubernetes/ethosenv-k8s/01-namespace.yaml
# WordPress Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: ethosenv
  labels:
    name: ethosenv
    app: wordpress
    environment: production
